# odoo-pretty-module-load

./: .gitignore  ChangeLog.md  README.rst  pyproject.toml
src/odoo/addons/pretty_module_load/: README.rst  __manifest__.py  log_utils.py  module_load_prints.py
src/odoo/addons/pretty_module_load/cli/: commands.py
